docs : Update homework

--- a/WEB/HOMEWORK4/index.html
+++ b/WEB/HOMEWORK4/index.html
@@ -13,7 +13,7 @@
         <li>대상 : 동물원, 식물원</li>
         <li>프로그램 : 야간동물원 관람, 동물생태 설명회, 식물전시</li>
     </ul>
-    <img src="https://i.namu.wiki/i/6o_ufBZybsWfpHQhS_OJo97EJInZOdVB05Vf0GUHwVjwbxzt5LvbdJ-I8cn3yi5EJeJB0d8_MFS_SRmQcKib5Q.webp" class="shadow">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRjoC52LPlAUSpptpJTe6T2y5PwFibEqIBUrg&s" class="shadow">
+    <img src="https://i.namu.wiki/i/6o_ufBZybsWfpHQhS_OJo97EJInZOdVB05Vf0GUHwVjwbxzt5LvbdJ-I8cn3yi5EJeJB0d8_MFS_SRmQcKib5Q.webp">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRjoC52LPlAUSpptpJTe6T2y5PwFibEqIBUrg&s">
 </body>
 </html>
