--- a/WEB/test.html
+++ b/WEB/test.html
@@ -7,47 +7,14 @@
 </head>
 <body>
 
-    <table border="1">
-        <caption>표 제목임</caption>
-        <thead>
-            <tr>
-                <th>헤더</th>
-                <th>헤더2</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>본문</td>
-                <td>본문2</td>
-            </tr>
-            <tr>
-                <td>본문4</td>
-                <td>본문3</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="2">마무리</td>
-            </tr>
-        </tfoot>
-    </table>
+    <p id="p">안녕</p>
 
+<script>
+    const p = document.getElementById("p");
+    p.style.color = "red";
+    p.style.backgroundColor = "yellow";
+    p.style.border = "5px blue solid";
+</script>
 
-    <h3>선택사항을 직접 입력하세요.</h3>
-<form>
-<label>전공 분야를 입력하세요.
-<input type="text" list="majorlist" name="major">
-<datalist id="majorlist">
-<option value="Software">소프트웨어</option>
-<option value="Robot">로봇</option>
-<option value="System">시스템</option>
-<option value="Service">서비스</option>
-<option value="Education">교육</option>
-</datalist>
-<p></p>
-<input type="submit" value="완료">
-<input type="reset" value="다시작성">
-</label>
-</form>
 </body>
 </html>
